--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@ body {
   background-color: var(--violet);
   background-size: cover;
   background-repeat: no-repeat;
+  overflow: hidden;
+  width: 100%;
+  height: 100vh;
 }
 
 .container {
@@ -25,19 +28,19 @@ body {
 }
 
 .logo {
-  width: 200px;
+  width: 12.5rem;
 }
 
 .mockup {
-  margin-top: 80px;
-  width: 100%;
+  margin-top: 3.75rem;
+  width: 95%;
 }
 
 .illustration {
   grid-area: img;
   display: flex;
   flex-direction: column;
-  padding: 60px 20px 60px 60px;
+  padding: 3.75rem 1.25rem 3.75rem 3.75rem;
 }
 
 .info {
@@ -46,13 +49,13 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 30px 80px 30px 30px;
+  padding: 1.875rem 5rem 1.875rem 0;
 }
 
 .info h1 {
   font-family: "Poppins", sans-serif;
   font-size: 2.5rem;
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
 }
 
 .info p {
@@ -64,11 +67,11 @@ body {
   text-align: center;
   color: var(--violet);
   background: white;
-  border-radius: 30px;
-  width: 160px;
-  padding: 10px;
-  margin-top: 20px;
-  box-shadow: 2px 5px 12px 6px rgb(0 0 0 / 20%);
+  border-radius: 1.875rem;
+  width: 10rem;
+  padding: 0.625rem;
+  margin-top: 1.25rem;
+  box-shadow: 0.125rem 0.3rem 10.125rem 0.375rem rgb(0 0 0 / 20%);
   cursor: pointer;
 }
 
@@ -82,6 +85,8 @@ footer {
   text-align: center;
   font-family: "Poppins", sans-serif;
   color: white;
+  position: absolute;
+  bottom: 10px;
 }
 
 .attribution a {
@@ -91,17 +96,18 @@ footer {
 .social {
   position: absolute;
   right: 0;
-  padding-right: 60px;
-  bottom: 40px;
+  padding-right: 3.75rem;
+  bottom: 2.5rem;
   cursor: pointer;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 1100px) and (min-width: 541px) {
   body {
+    overflow-y: scroll;
     background: url("/img/bg-mobile.svg");
-    background-color: var(--violet);
     background-repeat: no-repeat;
-    padding: 30px 35px;
+    background-color: var(--violet);
+    background-size: cover;
   }
 
   .container {
@@ -112,8 +118,56 @@ footer {
     text-align: center;
   }
 
+  .illustration {
+    align-items: center;
+  }
+
   .logo {
-    width: 130px;
+    width: 15rem;
+    align-self: start;
+  }
+
+  .mockup {
+    margin-top: 1.875rem;
+    width: 60%;
+  }
+
+  .info {
+    padding: 0 10%;
+  }
+
+  .info h1 {
+    font-size: 1.8rem;
+  }
+
+  .button {
+    align-self: center;
+    width: 13rem;
+    font-size: 0.8rem;
+    padding: 0.75rem;
+    margin-top: 1.875rem;
+    box-shadow: 0.125rem 0.19rem 0.3rem 0.19rem rgb(0 0 0 / 15%);
+  }
+
+  .social {
+    bottom: 5rem;
+  }
+}
+
+@media (max-width: 540px) {
+  body {
+    background: url("/img/bg-mobile.svg");
+    background-color: var(--violet);
+    background-repeat: no-repeat;
+    padding: 1.875rem 2.2rem;
+  }
+
+  .container {
+    grid-template-areas:
+      "img"
+      "info";
+    grid-template-columns: auto;
+    text-align: center;
   }
 
   .illustration {
@@ -122,11 +176,11 @@ footer {
 
   .mockup {
     width: 100%;
-    margin-top: 60px;
+    margin-top: 3.75rem;
   }
 
   .info {
-    padding: 70px 0;
+    padding: 4.375rem 0;
   }
 
   .info h1 {
@@ -140,10 +194,10 @@ footer {
 
   .button {
     align-self: center;
-    width: 210px;
+    width: 13rem;
     font-size: 0.8rem;
-    padding: 12px;
-    box-shadow: 2px 3px 5px 3px rgb(0 0 0 / 15%);
+    padding: 0.75rem;
+    box-shadow: 0.125rem 0.19rem 0.3rem 0.19rem rgb(0 0 0 / 15%);
   }
 
   footer {
@@ -158,12 +212,12 @@ footer {
   }
 
   .social img {
-    width: 30px;
-    height: 30px;
+    width: 1.875rem;
+    height: 1.875rem;
   }
 
   .attribution {
-    margin-top: 10px;
+    margin-top: 0.625rem;
     font-size: 0.7rem;
   }
 }
