--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,7 @@ footer {
     background-color: var(--violet);
     background-repeat: no-repeat;
     padding: 1.875rem 2.2rem;
+    background-size: contain;
   }
 
   .container {
